Closed Bug 1873244 Opened 2 years ago Closed 2 years ago

MOZ_USE_PERFORMANCE_MARKER_FILE doesn't work any more

Categories

(Core :: DOM: Performance APIs, defect)

defect

Tracking

()

RESOLVED FIXED
123 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox121 --- unaffected
firefox122 --- unaffected
firefox123 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

I missed this in my review of D196332 (part 2 in bug 1869835): This patch accidentally removed the only call to Performance::MaybeEmitExternalProfilerMarker, so the capability from bug 1835513 broke.

This doesn't matter for end users but it breaks some local sp3 profiling workflows.

Set release status flags based on info from the regressing bug 1869835

:bas.schouten, since you are the author of the regressor, bug 1869835, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Assignee: nobody → mstange.moz
Flags: needinfo?(bas)
Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/60a61e3e54f9 Reintroduce a call that was accidentally removed in bug 1869835. r=jrmuizel
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 123 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: