Bug 1873244 - Reintroduce a call that was accidentally removed in bug 1869835. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D197810